--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,40 @@
-.App {
-  text-align: center;
+nav {
+  border-bottom-style: solid;
+  border-bottom-color: #8A8A8A;
+  border-bottom-width: 1px
+}
+nav ul li {
+  display: inline;
+  color: #8A8A8A;
+  font-size: 22px;
+  font-family: 'Roboto', sans-serif;
+  padding: 0 1.5%;
+}
+nav ul li:first-child {
+  border-right: 1px solid #8A8A8A;
+}
+nav ul li a {
+  text-decoration: none;
+  color: #8A8A8A;
+}
+.active {
+  color: #393939;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+/*Search field inside /Search*/
+input {
+  margin: 3% 30%;
+  font-size: 30px;
+  font-family: 'Roboto', sans-serif;
+  outline: 0;
+  width: 50%;
+  border-width: 0 0 1px 0;
+  border-color: #CCCCCC;
+  padding: 1% 0
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+input:focus {
+  border-color: #8A8A8A
 }
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #CCCCCC;
 }
