--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@ nav ul li {
   font-family: 'Roboto', sans-serif;
   padding: 0 1.5%;
 }
+nav ul li p {
+  display: inline
+}
 nav ul li:first-child {
   border-right: 1px solid #8A8A8A;
 }
